Rewrote nwnets. Added packet sniffer for testing. Started adding server racks and servers - each rack can fit 5 servers. Ripped GoonStation's current DWAINE sprites, though they're not used for anything yet.

--- a/todo.txt
+++ b/todo.txt
@@ -16,3 +16,7 @@ TODO rooms:
 * Janitor's closet
 
 Supermatter/singularity/antimatter/fission/fusion/gas turbine engine?
+
+Servers make heat.
+
+Implement /datum/nwnet/cut_cable
