New computer icon system. Network signatures. Call/recall of emergency shuttle uses the comm dishes. Moved ex_act into /obj/machinery/computer instead of each individual computer. Computers in AI core. Toxins test chamber.

--- a/todo.txt
+++ b/todo.txt
@@ -20,3 +20,7 @@ Supermatter/singularity/antimatter/fission/fusion/gas turbine engine?
 Servers make heat.
 
 Implement /datum/nwnet/cut_cable
+
+
+
+Some sort of SpaceChem-like system for scientists. That would be fucking awesome.
