Added chemical dispenser, and beakers, and populated chemistry area on map. Also added code to get the current Git revision automatically.

--- a/todo.txt
+++ b/todo.txt
@@ -23,4 +23,9 @@ Implement /datum/nwnet/cut_cable
 
 
 
+
+(when food is done) Exploding peanut butter. You eat it, and you're mute for a few minutes, and then your head explodes.
+
+
+
 Some sort of SpaceChem-like system for scientists. That would be fucking awesome.
