--- a/todo.txt
+++ b/todo.txt
@@ -20,5 +20,6 @@ Implement /datum/nwnet/cut_cable
 
 (when food is done) Exploding peanut butter. You eat it, and you're mute for a few minutes, and then your head explodes.
 
+Garbage station for banned players?
 
 Some sort of SpaceChem-like system for scientists. That would be fucking awesome.
